--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html></html>
   
 <head>
     <title>Cattuong Le</title>
@@ -15,7 +15,9 @@
       <img src="/logo1.png" alt="image of logo"/>
     </div>
     <div class="H_Education">
-    <h2>Education</h2>
+    
+<!--Education-->
+      <h2>Education</h2>
     </div>
     <div class="BSc">
     <p><b>Honours Bachelor of Science in Biomedical Science</b></p>
@@ -29,7 +31,8 @@
     <ul>
       <li>Expected date of graduation: June, 2021</li>
     </ul>
-    
+  
+<!--Techincal Skills-->
     <h3>Techincal Skills
       <link rel="stylesheet" href="style.css" >
     </h3>
@@ -37,7 +40,8 @@
       <li>Familiar with Python, C++, and HTML</li>
       <li>Currently taking an introduction to computing course that sovers the fundamental data structures and basic principles of software engineering.</li>
     </ul>
-
+  
+<!--Research-->
     <div class="H_research">
     <h4>Research Experience
       <link rel="stylesheet" href="style.css">
@@ -69,6 +73,8 @@
       <li>Performed video analysis of rats’ motor function before and after an induced stroke.</li>
       <li>Created and organized booking of machne use among lab members</li>
     </ul>
+   
+<!--Volunteer-->
     <div class="H_Volunteer">
     <h5>Volunteer Experience
       <link rel="stylesheet" href="style.css">
@@ -84,6 +90,7 @@
       <li>Acted as the liaison for hospital visitors, informing patients and families about directions and available programs. Additionally, acted as a reliable support member for out-patient clinics’ work.</li>
     </ul>
 
+<!--Research-->
     <div class="H_EA">
     <h5>Extracurricular Activities
       <link rel="stylesheet" href="style.css">
@@ -110,6 +117,8 @@
       <li>Finished top 8 at provincial and national level in events such as 100m breast-stroke and 100m butterfly.</li> 
     </ul>
   </div>
+  
+<!--Award-->
     <div class="H_award">
     <h6>Awards
       <link rel="stylesheet" href="style.css">
@@ -126,6 +135,7 @@
     <div class="award5"><p><b>Admission Scholarship</b></p>
       <p><i>University of Ottawa</i></p></div>
 
+<!--Activities and Interests-->
       <div class="H_Interest">
         <h7><b>Interests and Activities</b>
           <link rel="stylesheet" href="style.css">
